--- a/.bluemix/ui.pipeline.yml
+++ b/.bluemix/ui.pipeline.yml
@@ -5,7 +5,7 @@ stages:
   - type: git
     branch: master
     url: ${GIT_REPO_URL}
-    token: ${GIT_REPO_TOKEN}
+    token: ${LOAD_TEST_GIT_REPO_TOKEN}
   triggers:
   - type: commit
   jobs:
