--- a/.bluemix/ui.pipeline.yml
+++ b/.bluemix/ui.pipeline.yml
@@ -11,6 +11,10 @@ stages:
   jobs:
   - name: Build
     type: builder
+  properties:
+  - name: PIPELINE_DEBUG_SCRIPT
+    value: 'true'
+    type: text
 - name: DEV
   inputs:
   - type: job
@@ -24,6 +28,9 @@ stages:
     type: text
   - name: APP_URL
     value: undefined
+    type: text
+  - name: PIPELINE_DEBUG_SCRIPT
+    value: 'true'
     type: text
   jobs:
   - name: Deploy to dev
@@ -53,6 +60,9 @@ stages:
     type: text
   - name: APP_URL
     value: undefined
+    type: text
+  - name: PIPELINE_DEBUG_SCRIPT
+    value: 'true'
     type: text
   jobs:
   - name: Deploy to QA
@@ -104,6 +114,9 @@ stages:
     type: text
   - name: APP_URL
     value: undefined
+    type: text
+  - name: PIPELINE_DEBUG_SCRIPT
+    value: 'true'
     type: text
   jobs:
   - name: Deploy to prod
